Fixed bug: Increased z-index for editWindow and overlay to avoid menu conflicts.
git-svn-id: https://svn.typo3.org/TYPO3v4/CoreProjects/feedit/trunk@610 743128fe-103e-dd11-99c4-001b210b3e58

--- a/typo3/sysext/fe_edit_advanced/res/css/fe_edit_advanced.css
+++ b/typo3/sysext/fe_edit_advanced/res/css/fe_edit_advanced.css
@@ -486,7 +486,7 @@ div.feEditAdvanced-contentWrapper form.typo3-editPanel {
 	color: #333;
 	background-image: url(../icons/forms/back_opacity.png);
 	text-align: left;
-	z-index: 185 !important;
+	z-index: 10000 !important;
 
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
@@ -517,7 +517,7 @@ div.feEditAdvanced-contentWrapper form.typo3-editPanel {
 	left: 0;
 	width: 100%;
 	height: 3420px;
-	z-index: 184;
+	z-index: 9999;
 	background-color: #000;
 
 	-moz-opacity: 0.5;
